syntax="proto3";
package anytype;
option go_package = "pb";
import "block-content.proto";

message BlockContentTextChange {
    oneof change {
        string text = 1;
        Block.ContentText.Style style = 2;
        Block.ContentText.Marks marks = 3;

        bool toggleable = 4;
        Block.ContentText.MarkerType markerType = 5;

        bool checkable = 6;
        bool checked = 7;
    }
}

message BlockContentPageChange {
    oneof change {
        Block.ContentPage.Style style = 1;
        Block block = 2;
    }
}

message BlockHeaderChange {
    oneof change {
        string id = 1;
        Block.Header.Type type = 2;
        string name = 3;
        string icon = 4;

        Block.Header.Permissions permissions = 5;
    }
}

message BlockChildrenChange {
    repeated string children = 1;
}

message BlockContentDashboardChange {
    oneof change {
        Block.ContentDashboard.Style style = 1;
        Block.Header header = 2; // not a dashboard header – one of children
    }
}

message BlockContentMediaChange {
    oneof change {
        string link = 1;
        Block.ContentMedia.State state = 2;
    }
}

message BlocksListSingleChange {
    repeated string id = 1;
    oneof change {
        BlockContentTextChange text = 2;
        BlockHeaderChange blockHeader = 3;
        BlockChildrenChange blockChildren = 4;
        BlockContentPageChange page = 5;
        BlockContentDashboardChange dashboard = 6;
        BlockContentMediaChange media = 7;
    }
}

message BlockChanges {
    repeated BlocksListSingleChange changes = 1;
}